# rag

./: pyproject.toml
deploy/compose/: docker-compose-rag-server.yaml
src/nvidia_rag/: __init__.py
src/nvidia_rag/ingestor_server/: main.py
src/nvidia_rag/rag_server/: Dockerfile  main.py  response_generator.py  server.py
src/nvidia_rag/utils/: common.py  configuration.py
src/nvidia_rag/utils/vdb/: __init__.py  vdb_ingest_base.py
src/nvidia_rag/utils/vdb/lancedb/: __init__.py  lancedb_vdb.py
tests/unit/: conftest.py
tests/unit/test_utils/: test_vdb_init.py
tests/unit/test_utils/test_vdb/: test_lancedb_e2e.py  test_lancedb_vdb.py
